; ModuleID = '/home/carl/AnghaBench/nanomsg/src/transports/tcp/extr_btcp.c_nn_btcp_listen.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/transports/tcp/extr_btcp.c_nn_btcp_listen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_btcp = type { i32, i32 }
%struct.sockaddr_storage = type { i32 }
%struct.sockaddr_in = type { i8* }
%struct.sockaddr_in6 = type { i8* }
%struct.sockaddr = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@NN_SOL_SOCKET = common dso_local global i32 0, align 4
@NN_IPV4ONLY = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@NN_BTCP_BACKLOG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nn_btcp*)* @nn_btcp_listen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nn_btcp_listen(%struct.nn_btcp* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nn_btcp*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockaddr_storage, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store %struct.nn_btcp* %0, %struct.nn_btcp** %3, align 8
  %13 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %14 = getelementptr inbounds %struct.nn_btcp, %struct.nn_btcp* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i8* @nn_ep_getaddr(i32 %15)
  store i8* %16, i8** %9, align 8
  %17 = call i32 @memset(%struct.sockaddr_storage* %5, i32 0, i32 4)
  %18 = load i8*, i8** %9, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = call i32 @strlen(i8* %19)
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %18, i64 %21
  store i8* %22, i8** %10, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = call i8* @strrchr(i8* %23, i8 signext 58)
  store i8* %24, i8** %11, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = icmp eq i8* %25, null
  br i1 %26, label %27, label %30

27:                                               ; preds = %1
  %28 = load i32, i32* @EINVAL, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %2, align 4
  br label %126

30:                                               ; preds = %1
  %31 = load i8*, i8** %11, align 8
  %32 = getelementptr inbounds i8, i8* %31, i32 1
  store i8* %32, i8** %11, align 8
  %33 = load i8*, i8** %11, align 8
  %34 = load i8*, i8** %10, align 8
  %35 = load i8*, i8** %11, align 8
  %36 = ptrtoint i8* %34 to i64
  %37 = ptrtoint i8* %35 to i64
  %38 = sub i64 %36, %37
  %39 = trunc i64 %38 to i32
  %40 = call i32 @nn_port_resolve(i8* %33, i32 %39)
  store i32 %40, i32* %4, align 4
  %41 = load i32, i32* %4, align 4
  %42 = icmp sle i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %30
  %44 = load i32, i32* %4, align 4
  store i32 %44, i32* %2, align 4
  br label %126

45:                                               ; preds = %30
  %46 = load i32, i32* %4, align 4
  %47 = sext i32 %46 to i64
  store i64 %47, i64* %12, align 8
  store i64 4, i64* %8, align 8
  %48 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %49 = getelementptr inbounds %struct.nn_btcp, %struct.nn_btcp* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* @NN_SOL_SOCKET, align 4
  %52 = load i32, i32* @NN_IPV4ONLY, align 4
  %53 = call i32 @nn_ep_getopt(i32 %50, i32 %51, i32 %52, i32* %7, i64* %8)
  %54 = load i64, i64* %8, align 8
  %55 = icmp eq i64 %54, 4
  %56 = zext i1 %55 to i32
  %57 = call i32 @nn_assert(i32 %56)
  %58 = load i8*, i8** %9, align 8
  %59 = load i8*, i8** %11, align 8
  %60 = load i8*, i8** %9, align 8
  %61 = ptrtoint i8* %59 to i64
  %62 = ptrtoint i8* %60 to i64
  %63 = sub i64 %61, %62
  %64 = sub nsw i64 %63, 1
  %65 = trunc i64 %64 to i32
  %66 = load i32, i32* %7, align 4
  %67 = call i32 @nn_iface_resolve(i8* %58, i32 %65, i32 %66, %struct.sockaddr_storage* %5, i64* %6)
  store i32 %67, i32* %4, align 4
  %68 = load i32, i32* %4, align 4
  %69 = icmp slt i32 %68, 0
  br i1 %69, label %70, label %72

70:                                               ; preds = %45
  %71 = load i32, i32* %4, align 4
  store i32 %71, i32* %2, align 4
  br label %126

72:                                               ; preds = %45
  %73 = getelementptr inbounds %struct.sockaddr_storage, %struct.sockaddr_storage* %5, i32 0, i32 0
  %74 = load i32, i32* %73, align 4
  switch i32 %74, label %85 [
    i32 129, label %75
    i32 128, label %80
  ]

75:                                               ; preds = %72
  %76 = load i64, i64* %12, align 8
  %77 = call i8* @htons(i64 %76)
  %78 = bitcast %struct.sockaddr_storage* %5 to %struct.sockaddr_in*
  %79 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %78, i32 0, i32 0
  store i8* %77, i8** %79, align 4
  store i64 8, i64* %6, align 8
  br label %87

80:                                               ; preds = %72
  %81 = load i64, i64* %12, align 8
  %82 = call i8* @htons(i64 %81)
  %83 = bitcast %struct.sockaddr_storage* %5 to %struct.sockaddr_in6*
  %84 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %83, i32 0, i32 0
  store i8* %82, i8** %84, align 4
  store i64 8, i64* %6, align 8
  br label %87

85:                                               ; preds = %72
  %86 = call i32 @nn_assert(i32 0)
  br label %87

87:                                               ; preds = %85, %80, %75
  %88 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %89 = getelementptr inbounds %struct.nn_btcp, %struct.nn_btcp* %88, i32 0, i32 0
  %90 = getelementptr inbounds %struct.sockaddr_storage, %struct.sockaddr_storage* %5, i32 0, i32 0
  %91 = load i32, i32* %90, align 4
  %92 = load i32, i32* @SOCK_STREAM, align 4
  %93 = call i32 @nn_usock_start(i32* %89, i32 %91, i32 %92, i32 0)
  store i32 %93, i32* %4, align 4
  %94 = load i32, i32* %4, align 4
  %95 = icmp slt i32 %94, 0
  br i1 %95, label %96, label %98

96:                                               ; preds = %87
  %97 = load i32, i32* %4, align 4
  store i32 %97, i32* %2, align 4
  br label %126

98:                                               ; preds = %87
  %99 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %100 = getelementptr inbounds %struct.nn_btcp, %struct.nn_btcp* %99, i32 0, i32 0
  %101 = bitcast %struct.sockaddr_storage* %5 to %struct.sockaddr*
  %102 = load i64, i64* %6, align 8
  %103 = call i32 @nn_usock_bind(i32* %100, %struct.sockaddr* %101, i64 %102)
  store i32 %103, i32* %4, align 4
  %104 = load i32, i32* %4, align 4
  %105 = icmp slt i32 %104, 0
  br i1 %105, label %106, label %111

106:                                              ; preds = %98
  %107 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %108 = getelementptr inbounds %struct.nn_btcp, %struct.nn_btcp* %107, i32 0, i32 0
  %109 = call i32 @nn_usock_stop(i32* %108)
  %110 = load i32, i32* %4, align 4
  store i32 %110, i32* %2, align 4
  br label %126

111:                                              ; preds = %98
  %112 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %113 = getelementptr inbounds %struct.nn_btcp, %struct.nn_btcp* %112, i32 0, i32 0
  %114 = load i32, i32* @NN_BTCP_BACKLOG, align 4
  %115 = call i32 @nn_usock_listen(i32* %113, i32 %114)
  store i32 %115, i32* %4, align 4
  %116 = load i32, i32* %4, align 4
  %117 = icmp slt i32 %116, 0
  br i1 %117, label %118, label %123

118:                                              ; preds = %111
  %119 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %120 = getelementptr inbounds %struct.nn_btcp, %struct.nn_btcp* %119, i32 0, i32 0
  %121 = call i32 @nn_usock_stop(i32* %120)
  %122 = load i32, i32* %4, align 4
  store i32 %122, i32* %2, align 4
  br label %126

123:                                              ; preds = %111
  %124 = load %struct.nn_btcp*, %struct.nn_btcp** %3, align 8
  %125 = call i32 @nn_btcp_start_accepting(%struct.nn_btcp* %124)
  store i32 0, i32* %2, align 4
  br label %126

126:                                              ; preds = %123, %118, %106, %96, %70, %43, %27
  %127 = load i32, i32* %2, align 4
  ret i32 %127
}

declare dso_local i8* @nn_ep_getaddr(i32) #1

declare dso_local i32 @memset(%struct.sockaddr_storage*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i32 @nn_port_resolve(i8*, i32) #1

declare dso_local i32 @nn_ep_getopt(i32, i32, i32, i32*, i64*) #1

declare dso_local i32 @nn_assert(i32) #1

declare dso_local i32 @nn_iface_resolve(i8*, i32, i32, %struct.sockaddr_storage*, i64*) #1

declare dso_local i8* @htons(i64) #1

declare dso_local i32 @nn_usock_start(i32*, i32, i32, i32) #1

declare dso_local i32 @nn_usock_bind(i32*, %struct.sockaddr*, i64) #1

declare dso_local i32 @nn_usock_stop(i32*) #1

declare dso_local i32 @nn_usock_listen(i32*, i32) #1

declare dso_local i32 @nn_btcp_start_accepting(%struct.nn_btcp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
